fix for issue #1564
fix #1564 by setting --enable-native-access=ALL-UNNAMED for Java Runtime to suppress the warning.